基本功能完成，后续开始多语言国际化

--- a/templates/login.html
+++ b/templates/login.html
@@ -40,10 +40,12 @@
                     <input type="password" id="password" data-i18n="password_placeholder" placeholder="请输入密码" required>
                 </div>
                 
+                <!-- 验证码部分注释开始 
                 <div class="verification-group">
                     <input type="text" id="verificationCode" data-i18n="verification_placeholder" placeholder="验证码" required>
                     <img src="/api/captcha" alt="验证码" onclick="this.src='/api/captcha?'+Math.random()">
                 </div>
+                验证码部分注释结束 -->
                 
                 <div class="remember-forgot">
                     <label>
