--- a/templates/travel_history.html
+++ b/templates/travel_history.html
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-    <!-- 底部按钮 -->
+    <!-- 底部按钮 先隐藏
     <div class="bottom-buttons">
         <button class="action-btn scan">
             <span class="icon">📷</span>
@@ -76,7 +76,7 @@
             <span class="icon">🔲</span>
             <span data-i18n="my_qr">我的二维码</span>
         </button>
-    </div>
+    </div> -->
 
     <!-- 底部导航 -->
     <nav class="bottom-nav">
